# my_music_tool-cpp

./: .clang-format  .clang-tidy  .gersemirc  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  pyproject.toml  readme.md
.devcontainer/: devcontainer.json
cmake/: CMakeLists.txt  cpack.cmake  cpm.cmake  nuget.cmake
cmake/presets/: _base.json
cmake/presets/unix/: _base.json
cmake/presets/unix/clang/: _base.json  _index.json  debug.json  release.json
cmake/presets/unix/gcc/: _base.json  debug.json  release.json
cmake/presets/windows/: _base.json
cmake/presets/windows/clang/: _base.json  _index.json  debug.json  release.json
cmake/presets/windows/msvc/: _base.json  debug.json  release.json
configured_files/: .clangd.in  CMakeLists.txt
docker/: Dockerfile  compose.yml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt
src/cli/src/: CMakeLists.txt  main.cpp
src/gui-unix/: CMakeLists.txt
src/gui-unix/src/: CMakeLists.txt  main.cpp
src/gui-windows/: CMakeLists.txt
src/gui-windows/src/: CMakeLists.txt  main.cpp  pch.hpp
